# pyAVRdbg

./: .gitignore  LICENSE  README.md  debugger.py  gdbstub.py  main.py  pyproject.toml  requirements.txt  runner.py
pyavrdbg/: debugger.py  gdbstub.py  main.py
